--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <h1>test</h1>
 <h2>hello</h2>
+<i class="fas fa-tachometer"></i>
+<i class="fas fa-camera"></i>
 <h2>hello2 </h2>
 <app-mat-form></app-mat-form>
 <style>
