--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>wel</h1>
-<app-table-actions></app-table-actions>
+<h1>Welcome</h1>
+<app-actions></app-actions>
 <!-- <app-mat-form></app-mat-form> -->
 
 <router-outlet></router-outlet>
