--- a/src/app/add-action-form/add-action-form.component.html
+++ b/src/app/add-action-form/add-action-form.component.html
@@ -1,43 +1,35 @@
 <div class="example-container">
-  <form [formGroup]="options" (ngSubmit)="saveForm()">
-    <!-- <mat-checkbox [formControl]="hideRequiredControl">Hide required marker</mat-checkbox> -->
+  <!-- <form [formGroup]="options" (ngSubmit)="saveForm()"> -->
+  <form class="form-signin" (ngSubmit)="onSubmit(f.value)" #f="ngForm">
+    <app-generic-input
+      [placeholder]="'Email'"
+      [isRequired]="true"
+      [errorMsg]="'בבקשה הכנס את שם הפעולה '"
+      [label]="'שם הפעולה'"
+      ngModel
+      name="name"
+    ></app-generic-input>
 
-    <!-- <div>
-      <label>Float label: </label>
-      <mat-radio-group [formControl]="floatLabelControl">
-        <mat-radio-button value="auto">Auto</mat-radio-button>
-        <mat-radio-button value="always">Always</mat-radio-button>
-      </mat-radio-group>
-    </div> -->
+    <app-generic-input
+      [placeholder]="'Email'"
+      [isRequired]="false"
+      [errorMsg]="'בבקשה הכנס את שם הפעולה '"
+      [label]="'סוג הפעולה'"
+      ngModel
+      name="type"
+    ></app-generic-input>
 
-    <!-- <mat-form-field appearance="fill" [floatLabel]="floatLabelControl.value">
-      <input matInput placeholder="הכנס שם פעולה" required />
-    </mat-form-field>
-
-    <mat-form-field appearance="fill" [floatLabel]="floatLabelControl.value">
-      <mat-label>סוג פעולה לדוגמה</mat-label>
-      <input matInput placeholder="הכנס סוג פעולה" />
-    </mat-form-field>
-
-    <mat-form-field appearance="fill" [floatLabel]="floatLabelControl.value">
-      <mat-select required>
-        <mat-option>-- None --</mat-option>
-        <mat-option value="option">Option</mat-option>
-      </mat-select>
-      <mat-label><mat-icon>favorite</mat-icon> <b> רקע</b> </mat-label>
-    </mat-form-field> -->
-
-    <label>
+    <!-- <label>
       שם
       <input type="text" formControlName="name" required />
-    </label>
+    </label> -->
 
     <label>
       סוג
       <input type="text" formControlName="type" required />
     </label>
 
-    <label>
+    <!-- <label>
       תאריך התחלה
       <input type="date" formControlName="startDate" required />
     </label>
@@ -45,13 +37,23 @@
     <label>
       תאריך סיום
       <input type="date" formControlName="endDate" required />
-    </label>
-    <label>
+    </label> -->
+    <!-- <label>
       פרטים נוספים
-      <input type="text" formControlName="endDate" />
-    </label>
+      <input type="text" formControlName="details" />
+    </label> -->
 
-    <button [disabled]="!options.valid" type="submit">
+    <app-generic-input
+      [placeholder]="'Email'"
+      [isRequired]="false"
+      [errorMsg]="'נא להכניס פרטים נוספים בפורמט הנכון '"
+      [label]="'פרטים נוספים'"
+      [pattern]="'netanel'"
+      ngModel
+      name="details"
+    ></app-generic-input>
+
+    <button [disabled]="!f.valid" type="submit">
       שמור
     </button>
   </form>
