--- a/src/app/generic-input/generic-input.component.scss
+++ b/src/app/generic-input/generic-input.component.scss
@@ -3,11 +3,21 @@
 
   .v {
     position: absolute;
-    right: 100%;
-    top: 9px;
+    right: 95%;
+    top: 20px;
   }
 
   .error {
     color: red;
   }
+}
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
 }
